--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -13,6 +13,26 @@
 	width:500px;
 	background-color: #eaeaea;
 }
+#signInBox {
+	height:400px;
+	width:400px;
+	background-color: #eaeaea;
+}
+
+#loginBtn {
+	width:350px;
+	height:48px;
+}
+.login-input-box input {
+	width:350px;
+	height:45px;
+}
+.sign-up-href {
+	width:300px;
+	height:50px;
+	font-size: 20px;
+}
+
 #loginIdCheckBtn {
 	width: 65px;
 	font-size: 11px;
