타임라인, 내 게시물, 글쓰기 화면 마크업 수정, 타임라인화면 - facebook 로고 클릭 이벤트, 파일 이미지 클릭이벤트

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -138,6 +138,21 @@
 }
 
 
+footer {
+	width:710px;
+	height:50px;
+	margin-left:60px;
+}
+.footer-btn {
+	margin-left: 260px;
+}
+.timeline-div {
+	width:420px;
+	height:70px;
+	background-color: #f8f8f8;
+}
+
+
 
 
 
