타임라인 댓글쓰기 창 마크업완료

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -160,6 +160,15 @@ footer {
 	margin-right:250px;
 }
 
+.timeline-box {
+	width:600px;
+	margin-left: 150px;
+}
+.comment-input {
+	width:520px;
+}
+
+
 
 
 
